# kepler-pipeline

./: .gitignore  README.md  pyproject.toml
bash/: compute_lc_corr.sh  create_bkgd_cat.pbs  do_kbonus_archive.sh  do_kbonus_archive_loop.sh  do_quarter.sh  do_quarter_channel.sh  extract_lcf_quarter_tarball.sh  kepler_lcs_ch31_q05.sh  kepler_lcs_ch42_q05.sh  make_lcs.pbs  pbs_lcs_q5_ch42_example.pbs  pbs_lcs_q5_ch42_example.sh  pbs_quarter.sh  pbs_quarter_batch.sh  pbs_quarter_channel.sh  pbs_quarter_fail.sh  rename_archive.sh  sh_quarter_batch.sh  stitch_fits_lcs.sh  stitch_fits_lcs_nas.sh  zip_lcfs.sh
kepler_workflow/: HZcalculator.py  check_batch_jobs_finish.py  check_for_all_tables.py  compute_lc_corr.py  concat_batch_files.py  create_background_catalog.py  create_gaia_background_catalog.py  create_kepler_lcf_archive.py  data_quality_assessment.py  data_quality_assessment_fxs.py  do_batch_info_tables.py  do_bls.py  do_bls_bundles.py  do_bls_koi.py  do_bundle_feathers.py  do_bundles.py  do_catalog.py  do_fits_stitch.py  do_fits_stitch_nas.py  download_kepler_tpfs_0025.sh  download_kepler_tpfs_0041.sh  download_kepler_tpfs_0070.sh  download_kepler_tpfs_0071.sh  fix_hlsp_lcf_header.py  get_tpfs_channel.py  give_me_batch_info.py  kbonus_lcf_archive.py  kepler_lcf_archive.py  make_archive_lookup_table.py  make_lightcurves.py  make_lightcurves_new.py  make_prf_model.py  paths.py  rename_batch_files.py  tpfmachine_keplerTPFs_config.yaml
notes/: lc_tar_with_errors.txt  missing_channels_all.txt  missing_channels_batches.txt  nas_run_072022_error_tracebacks.txt  (+1 more)
(+1298 files in other folders)
