[tool.poetry]
name = "kepler-pipeline"
version = "0.1.0"
description = ""
authors = ["Jorge Martinez-Palomera <jorgemarpa@ug.uchile.cl>"]
license = "MIT"
readme = "README.md"
keywords = ["NASA, Kepler, Astronomy"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"
scipy = "^1.5.4"
astropy = "^4.2"
tqdm = "^4.54.0"
matplotlib = "^3.3.3"
patsy = "^0.5.1"
pyia = "^1.2"
lightkurve = "^2.0.4"
psfmachine = "^1.0.0"
fitsio = "^1.1.3"
pandas = "^1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyterlab = "^2.2.2"
line-profiler = "^3.0.2"
memory-profiler = "^0.58.0"
flake8 = "^3.8.1"
black = "^20.8b1"
ipywidgets = "^7.6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
